# q2-SCNIC

./: .gitattributes  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  build_recipe.sh  community_tutorial.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
ci/recipe/: meta.yaml
q2-SCNIC-recipe/: meta.yaml
q2_SCNIC/: _SCNIC_methods.py  __init__.py  _format.py  _transformer.py  _type.py  _version.py  citations.bib  plugin_setup.py
q2_SCNIC/tests/: __init__.py  test_SCNIC_methods.py  test_format.py  test_plugin_setup.py  test_transformer.py
q2_SCNIC/tests/data/: fake_membership.txt  fake_net.gml
tests/: test_SCNIC_methods.py  test_format.py  test_transformer.py  test_type.py
tests/data/: fake_correls_pear.txt
